# paper-trader

./: .env.example  .gitignore  README.md  TODO.md  install.sh  pyproject.toml
src/paper_trader/: analytics.py  app.py  config.py  signals.py
src/paper_trader/ai/: analyst.py  calculator.py  client.py  models.py  prompts.py  screener.py  strategist.py
src/paper_trader/dashboard/: csrf.py  routes.py
src/paper_trader/dashboard/static/: app.js  mobile.css
src/paper_trader/dashboard/templates/: analytics.html  api_usage.html  base.html  decisions.html  dry_run.html  index.html  journal.html  settings.html
src/paper_trader/dashboard/templates/partials/: decisions.html  portfolio.html
src/paper_trader/db/: connection.py  queries.py  schema.py
src/paper_trader/market/: news.py  prices.py
src/paper_trader/portfolio/: commission.py  currency.py  manager.py  risk.py  tools.py
src/paper_trader/scheduler/: jobs.py
src/paper_trader/trading/: dry_run.py  pipeline.py
tests/: conftest.py  test_analytics.py  test_config.py  test_signals.py
tests/test_ai/: test_calculator.py  test_client.py  test_code_execution.py  test_models.py  test_prompts.py  test_screener.py
tests/test_dashboard/: test_routes.py
tests/test_db/: test_news_queries.py  test_queries.py  test_schema.py
tests/test_market/: test_news.py  test_prices.py
tests/test_portfolio/: test_churn.py  test_commission.py  test_currency.py  test_manager.py  test_risk.py  test_tools.py
tests/test_scheduler/: test_jobs.py
tests/test_trading/: test_dry_run.py  test_pipeline.py
